[gd_scene load_steps=13 format=3 uid="uid://bkvlixk8atngq"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_rqsoe"]

[sub_resource type="Animation" id="Animation_5y0sq"]
resource_name = "new_animation"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_awmt5"]
resource_name = "new_animation_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gr31"]
_data = {
"new_animation": SubResource("Animation_5y0sq"),
"new_animation_2": SubResource("Animation_awmt5")
}

[sub_resource type="SystemFont" id="SystemFont_plckt"]
font_names = PackedStringArray("Joystix Monospace")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1s8ng"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsy8l"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2
shadow_size = 5

[sub_resource type="SystemFont" id="SystemFont_8b0gg"]
font_names = PackedStringArray("Karmatic Arcade")

[sub_resource type="Gradient" id="Gradient_4xs5o"]
colors = PackedColorArray(0, 0, 0, 1, 0.144288, 0.00517479, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_easwh"]
gradient = SubResource("Gradient_4xs5o")
use_hdr = true

[sub_resource type="Gradient" id="Gradient_s1ay8"]
colors = PackedColorArray(0.144288, 0.00517479, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hyy56"]
gradient = SubResource("Gradient_s1ay8")
use_hdr = true

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqsoe")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.00392157, 0, 1)

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8gr31")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -67.0
offset_right = 153.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_plckt")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1s8ng")
theme_override_styles/normal = SubResource("StyleBoxFlat_dsy8l")
text = "START"

[node name="Modes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_plckt")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1s8ng")
theme_override_styles/normal = SubResource("StyleBoxFlat_dsy8l")
text = "GAME MODES"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_plckt")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_1s8ng")
theme_override_styles/normal = SubResource("StyleBoxFlat_dsy8l")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.108
anchor_right = 1.0
anchor_bottom = 0.108
offset_top = 0.16
offset_bottom = 99.16
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_8b0gg")
theme_override_font_sizes/font_size = 50
text = "Pairs on Hell"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TextureRect3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 225.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_easwh")

[node name="TextureRect4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -228.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_hyy56")

[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Modes" to="." method="_on_modes_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
